# dice-solana

./: Anchor.toml  package.json
programs/coin-flip/: Cargo.toml
programs/coin-flip/src/: error.rs  lib.rs  state.rs
tests/: coin-flip.ts  utilts.ts
